@@ -46,6 +46,7 @@ typedef struct
 
 	gchar *name;
 	gchar *description;
+	gchar *gconf_prefix;
 } ApplicationTile;
 
 typedef struct
@@ -57,7 +58,7 @@ GType application_tile_get_type (void);
 
 GtkWidget *application_tile_new (const gchar * desktop_item_id);
 GtkWidget *application_tile_new_full (const gchar * desktop_item_id,
-	GtkIconSize icon_size, gboolean show_generic_name);
+	GtkIconSize icon_size, gboolean show_generic_name, const gchar *gconf_prefix);
 
 GnomeDesktopItem *application_tile_get_desktop_item (ApplicationTile * tile);
 
